--- a/src/utils/styles/Cards.css
+++ b/src/utils/styles/Cards.css
@@ -1,6 +1,6 @@
 .cards {
   background-color: #f6f6f6;
-  margin: 0 100px;
+  margin: 0 100px 40px;
   border-radius: 25px;
   display: flex;
   flex-wrap: wrap;
