--- a/src/utils/styles/Nav.css
+++ b/src/utils/styles/Nav.css
@@ -1,11 +1,20 @@
 nav a {
-  font-size: 24px;
+  font-size: 12px;
   color: #ff6060;
   text-decoration: none;
-  margin-left: 60px;
+  margin-left: 10px;
+  text-transform: uppercase;
 }
 
 nav a:hover,
 nav a.active {
   text-decoration: underline;
+}
+
+@media only screen and (min-width: 1280px) {
+  nav a {
+    font-size: 24px;
+    margin-left: 60px;
+    text-transform: none;
+  }
 }
