--- a/src/utils/styles/Card.css
+++ b/src/utils/styles/Card.css
@@ -1,10 +1,10 @@
 .card {
   background-size: cover;
   background-repeat: none;
-  width: 340px;
-  height: 340px;
+  width: 100%;
+  height: 250px;
   border-radius: 10px;
-  margin: 60px;
+  margin: 10px 0;
   position: relative;
 }
 
@@ -12,8 +12,22 @@
   width: 50%;
   color: white;
   position: absolute;
-  bottom: 20px;
+  bottom: 15px;
   left: 20px;
   margin: 0;
   font-size: 18px;
+}
+
+@media only screen and (min-width: 1280px) {
+  .card {
+    width: 340px;
+    height: 340px;
+    border-radius: 10px;
+    margin: 60px;
+  }
+
+  .card h2 {
+    width: 50%;
+    bottom: 20px;
+  }
 }
