--- a/src/utils/styles/Footer.css
+++ b/src/utils/styles/Footer.css
@@ -11,6 +11,13 @@ footer {
 
 footer p {
   position: absolute;
-  bottom: 20px;
-  font-size: 24px;
+  bottom: 30px;
+  font-size: 12px;
+}
+
+@media only screen and (min-width: 1280px) {
+  footer p {
+    bottom: 20px;
+    font-size: 24px;
+  }
 }
