--- a/src/utils/styles/Banner.css
+++ b/src/utils/styles/Banner.css
@@ -1,25 +1,45 @@
 .banner {
   height: 110px;
-  background-image: url('../../assets/eric-muhr-P_XxsdVgtpQ-unsplash.jpg');
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url('../../assets/eric-muhr-P_XxsdVgtpQ-unsplash.jpg');
   background-position: bottom 200% center;
   background-repeat: no-repeat;
   background-size: 100%;
   background-attachment: fixed;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   color: #f6f6f6;
   margin: 20px 20px 10px;
+  padding: 15px;
   border-radius: 10px;
 }
 
 .banner h1 {
   font-size: 24px;
+  width: 75%;
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .banner {
+    background-position: top 210% center;
+    height: 180px;
+    margin: 50px;
+    border-radius: 25px;
+  }
+
+  .banner h1 {
+    font-size: 36px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
   .banner {
     background-position: center;
+    justify-content: center;
     height: 220px;
     margin: 70px 100px 45px;
     border-radius: 25px;
@@ -27,5 +47,7 @@
 
   .banner h1 {
     font-size: 48px;
+    width: 100%;
+    text-align: center;
   }
 }
