--- a/src/utils/styles/Card.css
+++ b/src/utils/styles/Card.css
@@ -18,11 +18,21 @@
   font-size: 18px;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .card {
+    height: 340px;
+    margin: 20px 0;
+  }
+
+  .card h2 {
+    bottom: 20px;
+  }
+}
+
 @media only screen and (min-width: 1280px) {
   .card {
     width: 340px;
     height: 340px;
-    border-radius: 10px;
     margin: 60px;
   }
 
