--- a/src/utils/styles/Footer.css
+++ b/src/utils/styles/Footer.css
@@ -15,6 +15,13 @@ footer p {
   font-size: 12px;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+  footer p {
+    bottom: 20px;
+    font-size: 18px;
+  }
+}
+
 @media only screen and (min-width: 1280px) {
   footer p {
     bottom: 20px;
