--- a/src/utils/styles/Header.css
+++ b/src/utils/styles/Header.css
@@ -10,6 +10,16 @@
   width: 145px;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .header {
+    margin: 20px 50px;
+  }
+
+  /* .header img {
+    width: 145px;
+  } */
+}
+
 @media only screen and (min-width: 1280px) {
   .header {
     margin: 40px 100px;
