--- a/src/utils/styles/Nav.css
+++ b/src/utils/styles/Nav.css
@@ -11,6 +11,13 @@ nav a.active {
   text-decoration: underline;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+  nav a {
+    font-size: 18px;
+    margin-left: 30px;
+  }
+}
+
 @media only screen and (min-width: 1280px) {
   nav a {
     font-size: 24px;
