--- a/src/utils/styles/Banner.css
+++ b/src/utils/styles/Banner.css
@@ -1,10 +1,5 @@
 .banner {
   height: 110px;
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url('../../assets/eric-muhr-P_XxsdVgtpQ-unsplash.jpg');
   background-position: bottom 200% center;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -18,6 +13,10 @@
   border-radius: 10px;
 }
 
+.banner-about {
+  background-position: top center;
+}
+
 .banner h1 {
   font-size: 24px;
   width: 75%;
@@ -29,6 +28,10 @@
     height: 180px;
     margin: 50px;
     border-radius: 25px;
+  }
+
+  .banner-about {
+    background-position: top center;
   }
 
   .banner h1 {
