--- a/src/utils/styles/Nav.css
+++ b/src/utils/styles/Nav.css
@@ -22,6 +22,6 @@ nav a.active {
   nav a {
     font-size: 24px;
     margin-left: 60px;
-    text-transform: none;
+    text-transform: capitalize;
   }
 }
