--- a/src/utils/styles/Collapses.css
+++ b/src/utils/styles/Collapses.css
@@ -1,5 +1,10 @@
-.collapse-section {
-  display: flex;
-  flex-direction: column;
-  margin: 0 200px 40px;
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+}
+
+@media only screen and (min-width: 1280px) {
+  .collapse-section {
+    display: flex;
+    flex-direction: column;
+    margin: 0 200px 40px;
+  }
 }
