--- a/src/utils/styles/Collapse.css
+++ b/src/utils/styles/Collapse.css
@@ -1,51 +1,78 @@
+.collapse {
+  margin-bottom: 20px;
+  /* display: block; */
+  background-color: #ff6060;
+  border-radius: 5px;
+}
+
+.collapse-button {
+  display: flex;
+  /* width: 100%; */
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 5px;
+  background-color: inherit;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  position: relative;
+  font-size: 12px;
+}
+
+.collapse-content {
+  /* display: none; */
+  /* position: absolute; */
+  background-color: #f6f6f6;
+  padding: 25px 10px 50px;
+  color: #ff6060;
+  font-size: 12px;
+
+  /* left: 0px; */
+  margin-top: -5px;
+  /* width: 100%; */
+  border-radius: 5px;
+  transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.collapse.open .collapse-button .select-arrow {
+  transform: rotate(180deg);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.select-arrow {
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .collapse {
+    margin-bottom: 50px;
+  }
+
+  .collapse-button {
+    padding: 5px 20px;
+    font-size: 18px;
+  }
+
+  .collapse-content {
+    padding: 25px 20px 50px;
+    font-size: 18px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
   .collapse {
     margin-bottom: 30px;
-    /* display: block; */
-    background-color: #ff6060;
-    border-radius: 5px;
   }
 
   .collapse-button {
-    display: flex;
-    /* width: 100%; */
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 5px;
-    background-color: inherit;
-    color: white;
-    padding: 1.5rem 1.25rem;
-    border: none;
-    cursor: pointer;
-    z-index: 1;
-    position: relative;
+    padding: 5px 20px;
     font-size: 24px;
   }
 
   .collapse-content {
-    /* display: none; */
-    /* position: absolute; */
-    background-color: #f6f6f6;
     padding: 35px 20px 20px;
-    color: #ff6060;
     font-size: 24px;
-
-    /* left: 0px; */
-    margin-top: -5px;
-    /* width: 100%; */
-    border-radius: 5px;
-    transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .collapse.open .collapse-button .select-arrow {
-    transform: rotate(180deg);
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .select-arrow {
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
