--- a/src/utils/styles/Collapses.css
+++ b/src/utils/styles/Collapses.css
@@ -1,10 +1,17 @@
+.collapse-section {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .collapse-section {
+    margin: 0 50px 50px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
   .collapse-section {
-    display: flex;
-    flex-direction: column;
     margin: 0 200px 40px;
   }
 }
