--- a/src/utils/styles/Card.css
+++ b/src/utils/styles/Card.css
@@ -6,6 +6,8 @@
   border-radius: 10px;
   margin: 10px 0;
   position: relative;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease-out;
 }
 
 .card h2 {
@@ -16,6 +18,11 @@
   left: 20px;
   margin: 0;
   font-size: 18px;
+}
+
+.card:hover {
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease-out;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
