--- a/src/utils/styles/Collapse.css
+++ b/src/utils/styles/Collapse.css
@@ -1,13 +1,11 @@
 .collapse {
   margin-bottom: 20px;
-  /* display: block; */
   background-color: #ff6060;
   border-radius: 5px;
 }
 
 .collapse-button {
   display: flex;
-  /* width: 100%; */
   align-items: center;
   justify-content: space-between;
   border-radius: 5px;
@@ -22,18 +20,18 @@
 }
 
 .collapse-content {
-  /* display: none; */
-  /* position: absolute; */
+  display: none;
   background-color: #f6f6f6;
   padding: 25px 10px 50px;
   color: #ff6060;
   font-size: 12px;
-
-  /* left: 0px; */
   margin-top: -5px;
-  /* width: 100%; */
   border-radius: 5px;
   transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.open .collapse-content {
+  display: block;
 }
 
 .collapse.open .collapse-button .select-arrow {
