--- a/src/utils/styles/Carousel.css
+++ b/src/utils/styles/Carousel.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 100px 30px;
+    margin-bottom: 30px;
   }
   .picture {
     width: 100%;
