--- a/src/utils/styles/Collapse.css
+++ b/src/utils/styles/Collapse.css
@@ -23,11 +23,16 @@
   display: none;
   background-color: #f6f6f6;
   padding: 25px 10px 50px;
+  margin: 0;
   color: #ff6060;
   font-size: 12px;
   margin-top: -5px;
   border-radius: 5px;
   transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.collapse-content li {
+  list-style: none;
 }
 
 .open .collapse-content {
