Did responsive Carousel

--- a/src/utils/styles/Housing.css
+++ b/src/utils/styles/Housing.css
@@ -1,10 +1,63 @@
+.housing {
+  margin: 30px 20px;
+  color: #ff6060;
+}
+.title-host {
+  display: flex;
+  justify-content: space-between;
+}
+.title-host p {
+  margin: 0;
+  font-size: 18px;
+}
+.title h1 {
+  margin: 0;
+  font-size: 36px;
+  font-weight: 500;
+}
+.title .tags {
+  display: flex;
+  margin-top: 20px;
+}
+.host-rating {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.host {
+  display: flex;
+  align-items: center;
+}
+.host p {
+  width: min-content;
+  text-align: right;
+  margin-right: 10px;
+}
+.host img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+.collapses {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.collapses .collapse {
+  width: 45%;
+  align-self: baseline;
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .housing {
+    margin: 30px 50px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
   .housing {
     margin: 20px 100px;
-    color: #ff6060;
   }
   .title-host {
     display: flex;
