--- a/src/utils/styles/Carousel.css
+++ b/src/utils/styles/Carousel.css
@@ -1,29 +1,98 @@
+.carousel {
+  position: relative;
+  height: 275px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.picture {
+  width: 100%;
+  height: 255px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.next-arrow,
+.previous-arrow {
+  position: absolute;
+  top: calc(50%-40px);
+  z-index: 5;
+  cursor: pointer;
+  user-select: none;
+  color: white;
+  font-size: 2em;
+}
+.next-arrow {
+  right: 5px;
+}
+.previous-arrow {
+  left: 5px;
+}
+.slide {
+  opacity: 0;
+  transition-duration: 1.5s ease;
+}
+.slide.active {
+  opacity: 1;
+  transition-duration: 1.5s;
+  transform: scale(1.08);
+  height: 255px;
+  position: absolute;
+  left: 10px;
+  right: 10px;
+}
+.bullet {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 12px;
+}
+.none {
+  display: none;
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
+  .carousel {
+    height: 325px;
+    margin-bottom: 15px;
+  }
+  .picture {
+    height: 300px;
+  }
+  .next-arrow,
+  .previous-arrow {
+    font-size: 3em;
+  }
+  .next-arrow {
+    right: 10px;
+  }
+  .previous-arrow {
+    left: 10px;
+  }
+  .slide.active {
+    height: 300px;
+    left: 30px;
+    right: 30px;
+  }
+  .bullet {
+    bottom: 20px;
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
   .carousel {
-    position: relative;
     height: 465px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 30px;
   }
   .picture {
-    width: 100%;
     height: 415px;
-    object-fit: cover;
     border-radius: 25px;
   }
   .next-arrow,
   .previous-arrow {
-    position: absolute;
-    top: calc(50%-40px);
-    z-index: 5;
-    cursor: pointer;
-    user-select: none;
-    color: white;
     font-size: 5em;
   }
   .next-arrow {
@@ -32,27 +101,13 @@
   .previous-arrow {
     left: 20px;
   }
-  .slide {
-    opacity: 0;
-    transition-duration: 1.5s ease;
-  }
   .slide.active {
-    opacity: 1;
-    transition-duration: 1.5s;
-    transform: scale(1.08);
     height: 415px;
-    position: absolute;
     left: 65px;
     right: 65px;
   }
   .bullet {
-    position: absolute;
     bottom: 25px;
-    left: 50%;
-    color: white;
     font-size: 18px;
-  }
-  .none {
-    display: none;
   }
 }
