--- a/src/utils/styles/Rating.css
+++ b/src/utils/styles/Rating.css
@@ -6,12 +6,18 @@
   color: #e3e3e3;
 }
 
+.stars .fa-star {
+  font-size: 15px;
+  margin-right: 5px;
+}
+
 @media only screen and (min-width: 769px) and (max-width: 1279px) {
 }
 
 @media only screen and (min-width: 1280px) {
   .stars .fa-star {
     font-size: 30px;
+    margin-right: 0;
     margin-left: 10px;
   }
 }
