--- a/src/utils/styles/Collapse.css
+++ b/src/utils/styles/Collapse.css
@@ -31,8 +31,8 @@
   transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.collapse-content li {
-  list-style: none;
+.collapse-content p {
+  margin: 0 0 5px;
 }
 
 .open .collapse-content {
